--- a/package.json
+++ b/package.json
@@ -43,7 +43,10 @@
     "webpack-hot-middleware": "^2.10.0"
   },
   "dependencies": {
+    "jest": "^19.0.2",
+    "ramda": "^0.23.0",
     "react": "^0.14.6",
-    "react-dom": "^0.14.6"
+    "react-dom": "^0.14.6",
+    "styled-components": "^1.4.5"
   }
 }
