--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Boilerplate for ReactJS project with hot code reloading",
   "scripts": {
     "start": "node server.js",
-    "lint": "eslint src"
+    "lint": "eslint src",
+    "test": "jest src/"
   },
   "repository": {
     "type": "git",
@@ -48,5 +49,17 @@
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
     "styled-components": "^1.4.5"
+  },
+  "jest": {
+    "automock": false,
+    "testRegex": "spec.js$",
+    "moduleFileExtensions": [
+      "js",
+      "jsx"
+    ],
+    "moduleDirectories": [
+      "node_modules",
+      "src"
+    ]
   }
 }
