Removed old code from package.json

--- a/package.json
+++ b/package.json
@@ -1,33 +1,14 @@
 {
-  "name": "react-hot-boilerplate",
+  "name": "ASAPP messaging",
   "version": "1.0.0",
-  "description": "Boilerplate for ReactJS project with hot code reloading",
+  "description": "Example project for ASAPP",
   "scripts": {
     "start": "node server.js",
     "lint": "eslint src",
     "test": "jest src/"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/gaearon/react-hot-boilerplate.git"
-  },
-  "keywords": [
-    "react",
-    "reactjs",
-    "boilerplate",
-    "hot",
-    "reload",
-    "hmr",
-    "live",
-    "edit",
-    "webpack"
-  ],
-  "author": "Dan Abramov <dan.abramov@me.com> (http://github.com/gaearon)",
+  "author": "Drew Proud <therealdrewproud@gmail.com> (http://github.com/drewproud)",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/gaearon/react-hot-boilerplate/issues"
-  },
-  "homepage": "https://github.com/gaearon/react-hot-boilerplate",
   "devDependencies": {
     "babel-core": "^6.0.20",
     "babel-eslint": "^4.1.3",
