--- a/.eslintrc
+++ b/.eslintrc
@@ -5,15 +5,21 @@
   },
   "env": {
     "browser": true,
-    "node": true
+    "node": true,
+    "jest": true
   },
   "parser": "babel-eslint",
+  "extends": "airbnb",
   "rules": {
     "quotes": [2, "single"],
     "strict": [2, "never"],
     "react/jsx-uses-react": 2,
     "react/jsx-uses-vars": 2,
-    "react/react-in-jsx-scope": 2
+    "react/react-in-jsx-scope": 2,
+    "react/jsx-filename-extension": 0,
+    "react/jsx-curly-spacing": 0,
+    "react/prefer-stateless-function": 0,
+    "no-confusing-arrow": 0
   },
   "plugins": [
     "react"
