--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "babel-preset-es2015": "^6.0.15",
     "babel-preset-react": "^6.0.15",
     "babel-preset-stage-0": "^6.0.15",
-    "eslint": "^1.10.3",
-    "eslint-plugin-react": "^3.6.2",
+    "eslint": "^3.19.0",
+    "eslint-plugin-react": "^6.10.3",
     "express": "^4.13.4",
     "react-hot-loader": "^1.3.0",
     "webpack": "^1.12.2",
@@ -26,6 +26,10 @@
   },
   "dependencies": {
     "css-loader": "^0.28.0",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "estraverse-fb": "^1.3.1",
     "jest": "^19.0.2",
     "normalize.css": "^6.0.0",
     "ramda": "^0.23.0",
