--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "css-loader": "^0.28.0",
+    "enzyme": "^2.8.2",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
@@ -33,7 +34,8 @@
     "jest": "^19.0.2",
     "normalize.css": "^6.0.0",
     "ramda": "^0.23.0",
-    "react": "^0.14.6",
+    "react": "14.9",
+    "react-addons-test-utils": "^0.14.6",
     "react-dom": "^0.14.6",
     "style-loader": "^0.16.1",
     "styled-components": "^1.4.5"
