--- a/package.json
+++ b/package.json
@@ -32,9 +32,10 @@
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "estraverse-fb": "^1.3.1",
     "jest": "^19.0.2",
+    "moment": "^2.18.1",
     "normalize.css": "^6.0.0",
     "ramda": "^0.23.0",
-    "react": "14.9",
+    "react": "^0.14.6",
     "react-addons-test-utils": "^0.14.6",
     "react-dom": "^0.14.6",
     "style-loader": "^0.16.1",
