--- a/.eslintrc
+++ b/.eslintrc
@@ -19,6 +19,7 @@
     "react/jsx-filename-extension": 0,
     "react/jsx-curly-spacing": 0,
     "react/prefer-stateless-function": 0,
+    "react/require-default-props": 0,
     "no-confusing-arrow": 0
   },
   "plugins": [
