--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "estraverse-fb": "^1.3.1",
+    "halogen": "^0.2.0",
     "jest": "^19.0.2",
     "moment": "^2.18.1",
     "normalize.css": "^6.0.0",
