--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
     "react": "^0.14.6",
     "react-addons-test-utils": "^0.14.6",
     "react-dom": "^0.14.6",
+    "react-redux": "^5.0.4",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0",
     "style-loader": "^0.16.1",
     "styled-components": "^1.4.5"
   },
